<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.seller_about.AboutFragment">

    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/bookcavelogo"/>

            <TextView
                android:layout_marginStart="20sp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/about"
                android:textSize="30sp"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Tại sao?"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="@string/about_para"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Huỳnh Đức Huy 26062001"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Đoàn Minh Khánh 02092001"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Vũ Quốc Khánh 02092001"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/nunito"
            android:text="Biểu tượng ứng dụng ghi có cho HKK Team"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Ứng dụng này làm gì?"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="@string/about_para1"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/nunito"
            android:text="@string/about_para10"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/nunito"
            android:text="@string/about_para11"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:text="Có bất kỳ đề xuất?"
            android:textSize="20sp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:autoLink="email"
            android:fontFamily="@font/nunito"
            android:text="Thả nó vào thư này"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:fontFamily="@font/nunito"
            android:minHeight="48dp"
            android:text="huynhduchuy2001@gmail.com"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>